# python-project-50

./: .gitignore  Makefile  README.md  gendiff_demo  gendiff_demo2  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
gendiff/: __init__.py  generate_diff.py  utils.py
gendiff/scripts/: gendiff.py
tests/: json_parsing.py  test.py  test_gendiff.py
tests/test_data/: expected.txt  file1.json  file2.json  filepath2.yml
