[project]
name = "hexlet-code"
authors = [
    {name = "Olvos", email = "anhkrem@gmail.com"},
]
version = "0.1.0"
description = "Training project..."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/olvos/python-project-50"
Telegram = "https://t.me/olwos"


[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
